--- a/THUBeamer-master/.gitignore
+++ b/THUBeamer-master/.gitignore
@@ -1,4 +1,3 @@
-main.pdf
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -33,7 +32,6 @@ main.pdf
 *.pdfsync
 
 ## Auxiliary and intermediate files from other packages:
-
 
 # algorithms
 *.alg
@@ -95,8 +93,7 @@ acs-*.bib
 # minitoc
 *.maf
 *.mtc
-*.mtc[0-9]
-*.mtc[1-9][0-9]
+*.mtc0
 
 # minted
 _minted*
@@ -104,9 +101,6 @@ _minted*
 
 # morewrites
 *.mw
-
-# mylatexformat
-*.fmt
 
 # nomencl
 *.nlo
@@ -120,11 +114,6 @@ _minted*
 *.sout
 *.sympy
 sympy-plots-for-*.tex/
-ref/*.pdf
-# TikZ & PGF
-*.dpth
-*.md5
-*.auxlock
 
 # todonotes
 *.tdo
@@ -135,56 +124,3 @@ ref/*.pdf
 # WinEdt
 *.bak
 *.sav
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# Windows
-# =========================
-
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-figures/uavplatform.eps
-master_thesis.pdf
