--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,5 @@ $RECYCLE.BIN/
 figures/uavplatform.eps
 master_thesis.pdf
 THUBeamer-master/tanglei_thesis_report.pdf
+THUBeamer-master/figures/newheader.pdf
+THUBeamer-master/figures/newheader.eps
