报告做了一半，暂存一下

--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,5 @@ master_thesis.pdf
 THUBeamer-master/tanglei_thesis_report.pdf
 THUBeamer-master/figures/newheader.pdf
 THUBeamer-master/figures/newheader.eps
+THUBeamer-master/figures/uavshichang.pdf
+THUBeamer-master/figures/uavshichang.png
